# Adventure_Game

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  docker-compose.yml  load_test_report_v2.html  locustfile.py  main.py  pyproject.toml
backend/app/core/: cache.py  config.py  dependencies.py  models.py  prompts.py  security.py  story_generator.py
backend/app/db/: database.py
backend/app/models/: game_session.py  job.py  story.py  user.py
backend/app/routers/: auth.py  game_session.py  job.py  stats.py  story.py
backend/app/schemas/: game_session.py  job.py  stats.py  story.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 018515f52e02_add_performance_indexes.py  1171ff4f40c6_creation_tables.py  6b1fb088cf57_add_performance_indexes.py  abf628156844_forward_ref_of_models_for_story_.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_auth.py  test_game_session.py  test_stats.py  test_stories.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.api.ts  jobs.api.ts  sessions.api.ts  stats.api.ts  stories.api.ts
frontend/src/hooks/: useAuth.ts  useJobPoller.ts  useSessions.ts  useStats.ts  useStories.ts
frontend/src/lib/: axios.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  Generate.tsx  Landing.tsx  Leaderboard.tsx  Login.tsx  Play.tsx  Register.tsx
frontend/src/store/: auth.store.ts  theme.store.ts
frontend/src/types/: auth.ts  game.ts  stats.ts  story.ts
(+13 files in other folders)
