[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[all]>=0.138.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "pytest>=9.1.1",
    "httpx2>=2.5.0",
    "redis>=8.0.1",
    "sentry-sdk[fastapi]>=2.63.0",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "locust>=2.44.4",
    "pytest-cov>=7.1.0",
]
